test/visibility/rename/badAccessWithPrefix.good
badAccessWithPrefix.chpl:8: In function 'main':
badAccessWithPrefix.chpl:9: error: cannot find 'baz' in module 'Foo'
